--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="pages/contact.html">Contact</a></li>
             </ul>
         </nav>
-        <h1>Home</h1>
+        <h1>Home change</h1>
     </header>
     <section>
         <div>a</div>
